--- a/app/static/style.css
+++ b/app/static/style.css
@@ -62,17 +62,22 @@ button {
   font-size: 16px;
 }
 
+button:hover {
+  background-color: #0056b3;
+}
+
 #clear-button {
-  background-color: #f44336;
+  display: none;
+  background-color: #fff;
+  color: #f44336;
+  border: 2px solid #f44336;
   margin-top: 10px;
 }
 
 #clear-button:hover {
-  background-color: #d32f2f;
-}
-
-button:hover {
-  background-color: #0056b3;
+  background-color: #e0e0e0;
+  color: #d32f2f;
+  border: 2px solid #d32f2f;
 }
 
 #prediction {
