ref(#14): add unit (cm) to form input lables

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
         Enter the measurements of the iris flower below to predict its species.
       </p>
       <form id="predict-form">
-        <label for="sepal_length">Sepal Length:</label>
+        <label for="sepal_length">Sepal Length (cm):</label>
         <input
           type="number"
           id="sepal_length"
@@ -25,7 +25,7 @@
         />
         <div class="hint">e.g., 5.1</div>
 
-        <label for="sepal_width">Sepal Width:</label>
+        <label for="sepal_width">Sepal Width (cm):</label>
         <input
           type="number"
           id="sepal_width"
@@ -35,7 +35,7 @@
         />
         <div class="hint">e.g., 3.5</div>
 
-        <label for="petal_length">Petal Length:</label>
+        <label for="petal_length">Petal Length (cm):</label>
         <input
           type="number"
           id="petal_length"
@@ -45,7 +45,7 @@
         />
         <div class="hint">e.g., 1.4</div>
 
-        <label for="petal_width">Petal Width:</label>
+        <label for="petal_width">Petal Width (cm):</label>
         <input
           type="number"
           id="petal_width"
